Improve notes editor score panel BUT NOT COMPLETE YET: layout of chord notes not good, need to save transpose as song property